--- a/.github/workflows/aseprite.yml
+++ b/.github/workflows/aseprite.yml
@@ -115,3 +115,9 @@ jobs:
         cd tests
         $XVFB bash run-tests.sh
 
+    - name: Archive
+      uses: actions/upload-artifact@v4
+      with:
+        name: aseprite-${{ steps.build.outputs.ASEPRITE_VERSION }}
+        path: github
+        if-no-files-found: error
